<resources>
    <string name="app_name">LoginApp</string>
    <string name="enter_username">User ID</string>
    <string name="enter_password">Password</string>
    <string name="text_forgot_password">Forgot Password</string>
    <string name="text_style">bold</string>
    <string name="btn_signIn_name">Sign In</string>
    <string name="btn_singUp_name">Sign Up</string>
    <string name="btn_cancel_name">Cancel</string>
    <string name="singin_activity_btn_name">Sign In</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>