<?xml version="1.0" encoding="utf-8"?>
<layout>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/layout_padding"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/logo_img"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/img_layout_height"
        android:layout_gravity="center_horizontal"
        android:scaleType="fitCenter"
        android:src="@drawable/logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/username_layout_marginTop"
        android:focusable="true"
        android:focusableInTouchMode="true"

        >

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/textBox_layout_height"
            android:layout_marginTop="@dimen/username_layout_marginTop"
            android:background="@drawable/border"
            android:ems="@integer/ems_val"
            android:hint="@string/enter_username"
            android:inputType="text"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginTop="@dimen/password_layout_marginTop"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/textBox_layout_height"
            android:background="@drawable/border"
            android:ems="@integer/ems_val"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/forgot_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/forgot_password_layout_marginTop"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/text_forgot_password"
            android:textColor="@color/DarkOrange"
            android:textSize="16sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_signIn_layout_marginTop"
        android:background="@drawable/button_rectangle"
        android:fontFamily="sans-serif-black"
        android:text="@string/btn_signIn_name"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_signUp_layout_marginTop"
        android:background="@drawable/btn_signup_rectangle"
        android:fontFamily="sans-serif-black"
        android:text="@string/btn_singUp_name"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_cancel_layout_marginTop"
        android:background="@drawable/btn_cancel_rectangle"
        android:fontFamily="sans-serif-black"
        android:text="@string/btn_cancel_name"
        android:textColor="@color/white" />


</LinearLayout>
</layout>